--- a/src/main/resources/view/Checkout.fxml
+++ b/src/main/resources/view/Checkout.fxml
@@ -31,10 +31,13 @@
             </TableColumn>
         </columns>
     </TableView>
-    <Text fx:id="totalCostText"/>
     <HBox alignment="center" spacing="10">
         <Text text="Promo code " />
         <TextField fx:id="promoCodeTextField" />
         <Button onAction="#handleUsePromoCode" fx:id="usePromoCodeButton" text="Use Promo Code" />
+    </HBox>
+    <Text fx:id="totalCostText"/>
+    <HBox alignment="center">
+        <Button onAction="#handleProceedWithCheckout" fx:id="proceedWithCheckoutButton" text="Proceed with checkout" />
     </HBox>
 </VBox>
