--- a/src/main/resources/view/ViewAllItems.fxml
+++ b/src/main/resources/view/ViewAllItems.fxml
@@ -24,13 +24,13 @@
          </TextField>
          <AnchorPane layoutX="29.0" layoutY="78.0" prefHeight="460.0" prefWidth="578.0" style="-fx-background-color: white;">
             <children>
-               <Button layoutX="40.0" layoutY="61.0" mnemonicParsing="false" prefHeight="173.0" prefWidth="150.0" onAction="#handleViewDetails">
+               <Button layoutX="40.0" layoutY="61.0" mnemonicParsing="false" prefHeight="173.0" prefWidth="150.0" onAction="#handleViewDetails" >
                   <graphic>
-                     <SplitPane dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0" >
+                     <SplitPane dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0" onMouseClicked="#handleViewDetails" >
                        <items>
                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: white;">
                               <children>
-                                 <ImageView fx:id="img1" fitHeight="114.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true"/>
+                                 <ImageView fx:id="img1" fitHeight="114.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true" />
                               </children>
                            </AnchorPane>
                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -54,7 +54,7 @@
                </Button>
                <Button fx:id="btnProduct2" layoutX="212.0" layoutY="61.0" mnemonicParsing="false" prefHeight="173.0" prefWidth="150.0" onAction="#handleViewDetails">
                   <graphic>
-                     <SplitPane fx:id="spProduct2" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0">
+                     <SplitPane fx:id="spProduct2" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0" onMouseClicked="#handleViewDetails" >
                         <items>
                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: white;">
                               <children>
@@ -82,7 +82,7 @@
                </Button>
                <Button fx:id="btnProduct3" layoutX="388.0" layoutY="61.0" mnemonicParsing="false" prefHeight="173.0" prefWidth="150.0" onAction="#handleViewDetails">
                   <graphic>
-                     <SplitPane fx:id="spProduct3" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0">
+                     <SplitPane fx:id="spProduct3" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0" onMouseClicked="#handleViewDetails" >
                         <items>
                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: white;">
                               <children>
@@ -110,7 +110,7 @@
                </Button>
                <Button fx:id="btnProduct4" layoutX="40.0" layoutY="264.0" mnemonicParsing="false" prefHeight="173.0" prefWidth="150.0" onAction="#handleViewDetails">
                   <graphic>
-                     <SplitPane fx:id="spProduct4" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0">
+                     <SplitPane fx:id="spProduct4" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0" onMouseClicked="#handleViewDetails" >
                         <items>
                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: white;">
                               <children>
@@ -138,7 +138,7 @@
                </Button>
                <Button fx:id="btnProduct5" layoutX="212.0" layoutY="264.0" mnemonicParsing="false" prefHeight="173.0" prefWidth="150.0" onAction="#handleViewDetails">
                   <graphic>
-                     <SplitPane fx:id="spProduct5" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0">
+                     <SplitPane fx:id="spProduct5" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0" onMouseClicked="#handleViewDetails" >
                         <items>
                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: white;">
                               <children>
@@ -166,7 +166,7 @@
                </Button>
                <Button fx:id="btnProduct6" layoutX="388.0" layoutY="264.0" mnemonicParsing="false" prefHeight="173.0" prefWidth="150.0" onAction="#handleViewDetails">
                   <graphic>
-                     <SplitPane fx:id="spProduct6" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0">
+                     <SplitPane fx:id="spProduct6" dividerPositions="0.7134502923976608" orientation="VERTICAL" prefHeight="173.0" prefWidth="143.0" onMouseClicked="#handleViewDetails" >
                         <items>
                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: white;">
                               <children>
