--- a/src/main/resources/view/ViewAllItems.fxml
+++ b/src/main/resources/view/ViewAllItems.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.layout.HBox?>
 <VBox alignment="center" prefHeight="563.0" prefWidth="635.0" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewAllItemsController">
    <AnchorPane prefHeight="559.0" prefWidth="635.0">
       <children>
@@ -209,7 +210,9 @@
          </AnchorPane>
       </children>
    </AnchorPane>
-    
-    <stylesheets>
-    </stylesheets>
+   <HBox alignment="center">
+      <Button text="Checkout" onAction="#handleCheckout"/>
+   </HBox>
+   <stylesheets>
+   </stylesheets>
 </VBox>
